--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <i class="fa-solid fa-moon btn-theme rotate"></i>
     <div class="container">
         <div class="header-section">
-            <h1>Metric/Imperial Unit Conversion</h1>
+            <h1 class="title-header">Metric/Imperial Unit Conversion</h1>
             <input
               required
               type="number"
