--- a/index.html
+++ b/index.html
@@ -7,32 +7,33 @@
     <title>Unit converter</title>
   </head>
   <body>
-    <i class="fa-solid fa-moon btn-theme rotate"></i>
-    <div class="container">
-        <div class="header-section">
-            <h1 class="title-header">Metric/Imperial Unit Conversion</h1>
-            <input
+      <i class="fa-solid fa-moon btn-theme rotate"></i>
+      <div class="container">
+          <div class="header-section">
+              <h1 class="title-header">Metric/Imperial Unit Conversion</h1>
+              <input
               required
               type="number"
               name="unit"
               placeholder="0" />
-            <button>Convert</button>
+              <button>Convert</button>
+            </div>
+            <div class="main-section">
+                <div>
+                    <h3>Lenght (Meter/Feet)</h3>
+                    <P>20 meters = 65.616 feet | 20 feet = 6.096 meters</P>
+                </div>
+                <div>
+                    <h3>Volume (Liters/Gallons)</h3>
+                    <P>20 liters = 5.284 gallons | 20 gallons = 75.708 liters</P>
+                </div>
+                <div>
+                    <h3>Mass (Kilograms/Pounds)</h3>
+                    <P>20 kilos = 44.092 pounds | 20 pounds = 9.072 kilos</P>
+                </div>
+            </div>
         </div>
-        <div class="main-section">
-            <div>
-                <h3>Lenght (Meter/Feet)</h3>
-                <P></P>
-            </div>
-            <div>
-                <h3>Volume (Liters/Gallons)</h3>
-                <P></P>
-            </div>
-            <div>
-                <h3>Mass (Kilograms/Pounds)</h3>
-                <P></P>
-            </div>
-        </div>
-    </div>
     <script src="index.js"></script>
+    <script src="https://kit.fontawesome.com/fd02bd66d1.js" crossorigin="anonymous"></script>
   </body>
 </html>
