--- a/index.html
+++ b/index.html
@@ -14,22 +14,23 @@
               <input
               required
               type="number"
+              id="unit"
               name="unit"
               placeholder="0" />
-              <button>Convert</button>
+              <button onclick="convert()">Convert</button>
             </div>
             <div class="main-section">
                 <div>
                     <h3>Lenght (Meter/Feet)</h3>
-                    <P>20 meters = 65.616 feet | 20 feet = 6.096 meters</P>
+                    <P id="lenghtPar">0 meters = 0 feet | 0 feet = 0 meters</P>
                 </div>
                 <div>
                     <h3>Volume (Liters/Gallons)</h3>
-                    <P>20 liters = 5.284 gallons | 20 gallons = 75.708 liters</P>
+                    <P id="volumePar">0 liters = 0 gallons | 0 gallons = 0 liters</P>
                 </div>
                 <div>
                     <h3>Mass (Kilograms/Pounds)</h3>
-                    <P>20 kilos = 44.092 pounds | 20 pounds = 9.072 kilos</P>
+                    <P id="massPar">0 kilos = 0 pounds | 0 pounds = 0 kilos</P>
                 </div>
             </div>
         </div>
